# XamlCpp

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
cmake/: xaml-config.cmake.in
cmake/Modules/: FindQwt.cmake
cmdline/: CMakeLists.txt
cmdline_helper/: CMakeLists.txt
detector/: CMakeLists.txt
global/: CMakeLists.txt
global/include/xaml/: enumerable.h  map.h  object.h  version.h
global/test/cxx/: CMakeLists.txt
helpers/: CMakeLists.txt
markup/: CMakeLists.txt
meta/: CMakeLists.txt
meta/src/: dynamic_type.cpp  dynamic_type_info.cpp
meta/test/: CMakeLists.txt
parser/: CMakeLists.txt
parser/src/: parser.cpp
parser/test/include/: test_model.h
parser/test/src/: test.xaml.cpp  test_model.cpp
parser/test/view/: test.xaml
rapidxml/src/: xml_document.cpp
resource_compiler/: CMakeLists.txt
resource_compiler/src/: main.cpp
ui/: CMakeLists.txt
ui/appmain/: CMakeLists.txt
ui/src/qt/: application.cpp  filebox.cpp  menu_bar.cpp  msgbox.cpp  window.cpp
ui/src/shared/: application.hpp  control.hpp  main_window.cpp  meta.cpp  window.cpp
ui_canvas/: CMakeLists.txt
ui_canvas/src/cocoa/: brush.mm  canvas.mm
ui_canvas/src/gtk3/: canvas.cpp
ui_canvas/src/qt/: canvas.cpp
ui_canvas/src/win/: canvas.cpp
ui_controls/: CMakeLists.txt
ui_controls/src/qt/: button.cpp  check_box.cpp  combo_box.cpp  diagram-control.cpp  diagram-control.h  diagram.cpp  diagram_control.cpp  diagram_control.h  entry.cpp  menu_item.cpp  progress.cpp  radio_box.cpp  spin_box_double.cpp  spin_box_int.cpp  text_box.cpp  titled_group.cpp  titled_group_control.cpp  titled_group_control.h  top_header.h
ui_controls/src/shared/: CMakeLists.txt  button.cpp  button.hpp  combo_box.cpp  combo_box.hpp  diagram.cpp  diagram.hpp  entry.cpp  entry.hpp  meta.cpp  spin_box_base.cpp  spin_box_base.hpp  spin_box_double.cpp  spin_box_double.hpp  spin_box_int.cpp  spin_box_int.hpp  text_box.cpp  titled_group.cpp  titled_group.hpp
ui_controls/test/: CMakeLists.txt
ui_controls/test/src/: diagram_window.cpp  main.cpp  test_window.cpp
ui_webview/: CMakeLists.txt
(+20 files in other folders)
