project(XamlUITest C CXX)

set(TEST_SOURCE "src/main.cpp" "src/test_window.cpp")
add_executable(ui_test ${TEST_SOURCE})
if(WIN32)
    set_target_properties(ui_test PROPERTIES WIN32_EXECUTABLE ON)
endif()
target_compile_definitions(ui_test PRIVATE "_USE_MATH_DEFINES")
target_include_directories(ui_test PUBLIC include)
target_link_libraries(ui_test xaml_ui_controls xaml_ui_canvas xaml_ui_appmain)

set(DIAGRAM_SOURCE "src/main.cpp" "src/diagram_window.cpp")
add_executable(diagram_test ${DIAGRAM_SOURCE})
if(WIN32)
    set_target_properties(diagram_test PROPERTIES WIN32_EXECUTABLE ON)
endif()
target_compile_definitions(diagram_test PRIVATE "_USE_MATH_DEFINES")
target_include_directories(diagram_test PUBLIC include)
target_link_libraries(diagram_test xaml_ui_controls xaml_ui_canvas xaml_ui_appmain)
